# ciwt

./: .gitignore  CIWTApp.cpp  CMakeLists.txt  CMakeLists1.txt  Tracy.cpp  Tracy.h  try0.cpp
data/: kitti_sample.cfg
data/kitti_sample/tracker_output/data/: 0005.txt
include/depth_estimation/: camera_depth_estimator.h
include/libviso2/: viso_stereo.h
include/scene_segmentation/: ground_histogram.h  object_proposal.h  scene_segmentation.h  utils_segmentation.h
include/tracking/: dynamics_handler.h  hypothesis.h  kalman_filter.h  observation.h  resource_manager.h  utils_tracking.h  visualization.h
src/: CMakeLists.txt
src/CIWT/: CIWT_dynamics_handler.cpp  CIWT_dynamics_handler.h  CIWT_tracker.cpp  CIWT_tracker.h  CMakeLists.txt  coupled_image_world_space_filter.cpp  coupled_image_world_space_filter.h  hypothesis_handling.cpp  observation_fusion.cpp  observation_fusion.h  parameters_CIWT.h  potential_functions.cpp
src/connected_components/: CC.cpp  CMakeLists.txt  CPoint.cpp
src/depth_estimation/: CMakeLists.txt  camera_depth_estimator.cc
src/libelas/: CMakeLists.txt  descriptor.cpp  elas.cpp  filter.cpp  matrix.cpp  triangle.cpp
src/libviso2/: CMakeLists.txt  filter.cpp  matcher.cpp  matrix.cpp  reconstruction.cpp  triangle.cpp  viso.cpp  viso_mono.cpp  viso_stereo.cpp
src/scene_segmentation/: CMakeLists.txt  ground_histogram.cpp  multi_scale_quickshift.cpp  object_proposal.cpp  scene_segmentation.cpp  utils_segmentation.cpp
src/sun_utils/: CMakeLists.txt  datasets_dirty_utils.cpp  datasets_dirty_utils.h  disparity.cpp  ground_model.h  shared_types.h  utils_pointcloud.cpp  utils_visualization.cpp
src/tracking/: CMakeLists.txt  category_filter.cpp  extended_kalman_filter.cpp  hypothesis.cpp  kalman_filter.cpp  multi_object_tracker_base.cpp  observation.cpp  qpbo.cpp  resource_manager.cpp  utils_tracking.cpp  visualization.cpp
